<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:initialExpandedChildrenCount="1"
        app:key="advanced"
        app:title="@string/advanced_attributes">

        <Preference
            app:key="expandable"
            app:summary="@string/summary_expandable_preference"
            app:title="@string/title_expandable_preference" />

        <Preference
            app:summary="@string/summary_intent_preference"
            app:title="@string/title_intent_preference">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.android.com" />

        </Preference>

        <SwitchPreferenceCompat
            app:key="parent"
            app:summary="@string/summary_parent_preference"
            app:title="@string/title_parent_preference" />

        <SwitchPreferenceCompat
            app:dependency="parent"
            app:key="child"
            app:summary="@string/summary_child_preference"
            app:title="@string/title_child_preference" />

        <SwitchPreferenceCompat
            app:key="toggle_summary"
            app:summaryOff="@string/summary_off_toggle_summary_preference"
            app:summaryOn="@string/summary_on_toggle_summary_preference"
            app:title="@string/title_toggle_summary_preference" />

        <Preference
            app:enableCopying="true"
            app:key="copyable"
            app:selectable="false"
            app:summary="@string/summary_copyable_preference"
            app:title="@string/title_copyable_preference" />
    </PreferenceCategory>
</PreferenceScreen>