<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/basic_preferences">

        <Preference
            app:key="preference"
            app:summary="@string/summary_basic_preference"
            app:title="@string/title_basic_preference" />

        <Preference
            app:key="stylized"
            app:summary="@string/summary_stylish_preference"
            app:title="@string/title_stylish_preference" />

        <Preference
            app:icon="@drawable/ic_android"
            app:key="icon"
            app:summary="@string/summary_icon_preference"
            app:title="@string/title_icon_preference" />

        <Preference
            app:key="single_line_title"
            app:singleLineTitle="true"
            app:summary="@string/summary_single_line_title_preference"
            app:title="@string/title_single_line_title_preference" />
    </PreferenceCategory>

</PreferenceScreen>