<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/dialogs">

        <EditTextPreference
            app:dialogTitle="@string/dialog_title_edittext_preference"
            app:key="edittext"
            app:title="@string/title_edittext_preference"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:dialogTitle="@string/dialog_title_list_preference"
            app:entries="@array/entries"
            app:entryValues="@array/entry_values"
            app:key="list"
            app:title="@string/title_list_preference"
            app:useSimpleSummaryProvider="true" />

        <MultiSelectListPreference
            app:dialogTitle="@string/dialog_title_multi_list_preference"
            app:entries="@array/entries"
            app:entryValues="@array/entry_values"
            app:key="multi_select_list"
            app:summary="@string/summary_multi_list_preference"
            app:title="@string/title_multi_list_preference" />
    </PreferenceCategory>
</PreferenceScreen>