<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/widgets">

        <CheckBoxPreference
            app:key="checkbox"
            app:summary="@string/summary_checkbox_preference"
            app:title="@string/title_checkbox_preference" />

        <SwitchPreferenceCompat
            app:key="switch"
            app:summary="@string/summary_switch_preference"
            app:title="@string/title_switch_preference" />

        <DropDownPreference
            app:entries="@array/entries"
            app:entryValues="@array/entry_values"
            app:key="dropdown"
            app:title="@string/title_dropdown_preference"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            app:defaultValue="20"
            app:key="seekbar"
            app:title="@string/title_seekbar_preference" />
    </PreferenceCategory>
</PreferenceScreen>