<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.android.extapp.MainActivity$BasicPreferencesFragment"
        app:summary="Sample preferences using basic attributes"
        app:title="@string/basic_preferences" />

    <Preference
        app:fragment="com.android.extapp.MainActivity$WidgetPreferencesFragment"
        app:summary="Sample preferences with different widgets"
        app:title="@string/widgets" />

    <Preference
        app:fragment="com.android.extapp.MainActivity$DialogPreferencesFragment"
        app:summary="Sample preferences that launch dialogs"
        app:title="@string/dialogs" />

    <Preference
        app:fragment="com.android.extapp.MainActivity$AdvancedPreferencesFragment"
        app:summary="Sample preferences with advanced attributes"
        app:title="@string/advanced_attributes" />
</PreferenceScreen>